# emotion_classification

./: docker-compose.yml  pyproject.toml
src/: app.py  front.py
src/api/routes/: healthcheck.py  predict.py  router.py
src/schemas/: requests.py
src/services/: model.py  utils.py
workflow/: fastapi.dockerfile  streamlit.dockerfile
